--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <a class="header-content__button" href="#">RU <span>| ENG</span></a>
         </div>
 
-        <img class="header-img" src="img/BSPP2266.png" alt="">
+        <div class="header-img"></div>
     </div>
 
     <div class="about">
@@ -62,11 +62,23 @@
         <h1 class="portfolio__h1">Portfolio</h1>
 
         <div class="portfolio-block">
-            <a href="portfolio-block-link">
-                <img href="portfolio-block-link__img" src="./img/Слой 8.png" alt="">
+            <a  class="portfolio-block-link">
+                <img class="portfolio-block-link__img" src="./img/Слой 8.png" alt="">
             </a>
 
-            <a class="portfolio-block__a" href=""></a>
+            <a class="portfolio-block__a" href="#">Online fashion store - Homepage</a>
+
+            <a href="#" class="portfolio-block-link1">
+                <img class="portfolio-block-link1__img" src="./img/reebok_web.png" alt="">
+            </a>
+
+            <a class="portfolio-block__a" href="#">Reebok Store - Concept</a>
+       
+            <a href="#" class="portfolio-block-link2">
+                <img class="portfolio-block-link2__img" src="./img/reebok_web-1.png" alt="">
+            </a>
+
+            <a class="portfolio-block__a" href="#">Braun Landing Page - Concept</a>
         </div>
     </div>
 
@@ -76,13 +88,13 @@
         <p class="contacts__p">Want to know more or just chat?
             You are welcome!</p>
 
-        <a href="contacts__a">Send message</a>
+        <a class="contacts__a" href="#">Send message</a>
 
         <img class="contacts__img" src="./img/Group 12.png" alt="">
 
         <p class="contacts__end">
-            Like me on
-            LinkedIn, Instagram, Behance, Dribble
+            Like me on<span class="contacts__end-span"> LinkedIn, Instagram, Behance, Dribble</span>
+           
         </p>
     </div>
 </body>
