--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
             <div class="header-content__about">UX | UI designer 24 years old, Minsk</div>
 
-            <a class="header-content__button" href="#">RU <span>| ENG</span></a>
+            <a class="header-content__button" href="./rus.html">RU <span>| ENG</span></a>
         </div>
 
         <div class="header-img"></div>
