--- a/rus.html
+++ b/rus.html
@@ -26,7 +26,7 @@
 
             <div class="header-content__about">UX | UI дизайнер 24 года, Минск</div>
 
-            <a class="header-content__button" href="index.html">RU <span>| ENG</span></a>
+            <a class="header-content__button" href="./index.html">RU <span>| ENG</span></a>
         </div>
 
         <div class="header-img"></div>
